Fri Jul 31 12:12:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp
        * connectors/dds4ccm/impl/ndds/SubscriberListener.cpp
        * connectors/dds4ccm/impl/ndds/SubscriberListener.h
        * connectors/dds4ccm/impl/ndds/Writer.tpp
          Fixed some small bugs, the example compiles again

Fri Jul 31 11:41:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataWriterListener.cpp
        * connectors/dds4ccm/impl/ndds/LivelinessLostStatus.h
        * connectors/dds4ccm/impl/ndds/OfferedDeadlineMissedStatus.h
        * connectors/dds4ccm/impl/ndds/OfferedIncompatibleQosStatus.h
        * connectors/dds4ccm/impl/ndds/PublicationMatchedStatus.h
          DataWriterListener is now implemented

Fri Jul 31 11:26:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp
        * connectors/dds4ccm/impl/ndds/QosPolicyCountSeq.h
        * connectors/dds4ccm/impl/ndds/RequestedIncompatibleQosStatus.h
          DataReaderListener is now fully implemented

Fri Jul 31 11:13:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp
        * connectors/dds4ccm/impl/ndds/LivelinessChangedStatus.h
        * connectors/dds4ccm/impl/ndds/RequestedDeadlineMissedStatus.h
          Added some more status conversions

Fri Jul 31 11:05:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp
        * connectors/dds4ccm/impl/ndds/DataReader.h
        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp
        * connectors/dds4ccm/impl/ndds/DataReaderListener.h
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp
        * connectors/dds4ccm/impl/ndds/DataWriter.h