@@ -2,10 +2,13 @@
 
 #include "PublisherListener.h"
 #include "Publisher.h"
+#include "DataWriter.h"
+#include "PublicationMatchedStatus.h"
+#include "LivelinessLostStatus.h"
+#include "OfferedIncompatibleQosStatus.h"
+#include "OfferedDeadlineMissedStatus.h"
 
 #include "dds4ccm/idl/dds4ccm_BaseC.h"
-
-#include "ciao/Logger/Log_Macros.h"
 
 namespace CIAO
 {
@@ -14,8 +17,8 @@ namespace CIAO
     namespace RTI
     {
       // Implementation skeleton constructor
-      RTI_PublisherListener_i::RTI_PublisherListener_i (DDSPublisherListener *p)
-        : impl_ (p)
+      RTI_PublisherListener_i::RTI_PublisherListener_i ( ::DDS::PublisherListener_ptr p)
+        : impl_ (::DDS::PublisherListener::_duplicate (p))
       {
       }
 
@@ -26,40 +29,52 @@ namespace CIAO
 
       void
       RTI_PublisherListener_i::on_offered_deadline_missed (
-        ::DDS::DataWriter_ptr writer,
-        const ::DDS::OfferedDeadlineMissedStatus & status)
+        ::DDSDataWriter* writer,
+        const ::DDS_OfferedDeadlineMissedStatus & status)
       {
-        throw CORBA::NO_IMPLEMENT ();
+        ::DDS::OfferedDeadlineMissedStatus ddsstatus;
+        ddsstatus <<= status;
+        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i (writer);
+        this->impl_->on_offered_deadline_missed (dds_writer.in (), ddsstatus);
       }
 
       void
       RTI_PublisherListener_i::on_offered_incompatible_qos (
-        ::DDS::DataWriter_ptr writer,
-        const ::DDS::OfferedIncompatibleQosStatus & status)
+        ::DDSDataWriter* writer,
+        const ::DDS_OfferedIncompatibleQosStatus & status)
       {
-        throw CORBA::NO_IMPLEMENT ();
+        ::DDS::OfferedIncompatibleQosStatus ddsstatus;
+        ddsstatus <<= status;
+        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i (writer);
+        this->impl_->on_offered_incompatible_qos (dds_writer.in (), ddsstatus);
       }
 
       void
       RTI_PublisherListener_i::on_liveliness_lost (
-        ::DDS::DataWriter_ptr writer,
-        const ::DDS::LivelinessLostStatus & status)
+        ::DDSDataWriter* writer,
+        const ::DDS_LivelinessLostStatus & status)
       {
-        throw CORBA::NO_IMPLEMENT ();
+        ::DDS::LivelinessLostStatus ddsstatus;
+        ddsstatus <<= status;
+        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i (writer);
+        this->impl_->on_liveliness_lost (dds_writer.in (), ddsstatus);
       }
 
       void
       RTI_PublisherListener_i::on_publication_matched (
-        ::DDS::DataWriter_ptr writer,
-        const ::DDS::PublicationMatchedStatus & status)
+        ::DDSDataWriter* writer,
+        const ::DDS_PublicationMatchedStatus & status)
       {
-        throw CORBA::NO_IMPLEMENT ();
+        ::DDS::PublicationMatchedStatus ddsstatus;
+        ddsstatus <<= status;
+        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i (writer);
+        this->impl_->on_publication_matched (dds_writer.in (), ddsstatus);
       }
 
-      DDSPublisherListener *
+      ::DDS::PublisherListener_ptr
       RTI_PublisherListener_i::get_publisher_listener (void)
       {
-        return this->impl_;
+        return ::DDS::PublisherListener::_duplicate (this->impl_.in ());
       }
     }
   }
